# GenomeAssembler

./: .gitignore  CMakeLists.txt  Project_Report.docx  README.md
include/: contig.h  graph.h  kmerifier.h  preprocessing.h
src/: graph.cpp  kmerifier.cpp  main.cpp  preproccessing.cpp
tests/: test_main.cpp
